# internal/api/ogen/oas_parameters_gen.go
@@ -968,6 +968,72 @@ func decodeGetCollectionParams(args [1]string, argsEscaped bool, r *http.Request
 	return params, nil
 }
 
+// GetCollectionMetadataParams is parameters of getCollectionMetadata operation.
+type GetCollectionMetadataParams struct {
+	// TMDb collection ID.
+	TmdbId int
+}
+
+func unpackGetCollectionMetadataParams(packed middleware.Parameters) (params GetCollectionMetadataParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "tmdbId",
+			In:   "path",
+		}
+		params.TmdbId = packed[key].(int)
+	}
+	return params
+}
+
+func decodeGetCollectionMetadataParams(args [1]string, argsEscaped bool, r *http.Request) (params GetCollectionMetadataParams, _ error) {
+	// Decode path: tmdbId.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "tmdbId",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt(val)
+				if err != nil {
+					return err
+				}
+
+				params.TmdbId = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "tmdbId",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // GetCollectionMoviesParams is parameters of getCollectionMovies operation.
 type GetCollectionMoviesParams struct {
 	// Collection ID.
@@ -2460,6 +2526,72 @@ func decodeGetServerSettingParams(args [1]string, argsEscaped bool, r *http.Requ
 	}(); err != nil {
 		return params, &ogenerrors.DecodeParamError{
 			Name: "key",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
+// GetSimilarMoviesParams is parameters of getSimilarMovies operation.
+type GetSimilarMoviesParams struct {
+	// Movie ID.
+	ID uuid.UUID
+}
+
+func unpackGetSimilarMoviesParams(packed middleware.Parameters) (params GetSimilarMoviesParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "id",
+			In:   "path",
+		}
+		params.ID = packed[key].(uuid.UUID)
+	}
+	return params
+}
+
+func decodeGetSimilarMoviesParams(args [1]string, argsEscaped bool, r *http.Request) (params GetSimilarMoviesParams, _ error) {
+	// Decode path: id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToUUID(val)
+				if err != nil {
+					return err
+				}
+
+				params.ID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "id",
 			In:   "path",
 			Err:  err,
 		}
